# satteri

./: Cargo.toml  README.md  knip.json  pnpm-lock.yaml
.github/workflows/: benchmark.yml  deploy-playground.yml  release.yml
.sampo/changesets/: ardent-runesinger-sampsa.md  directive-attrs-deserialize.md  fabled-warden-ilmatar.md  fix-mdx-esm-expressions.md  fix-superscript-subscript-rendering.md  gentle-pine-satteri.md  mdx-feature-flag.md  raw-return-no-extra-wrapper.md  silver-fox-mdx.md  stalwart-stormcaller-kullervo.md  virtuous-princess-lempo.md  webcontainer-fallback.md
crates/bench/: Cargo.toml
crates/bench/benches/: pipeline.rs
crates/mdxjs-rs/tests/: mdast_to_hast.rs  test.rs
crates/parser/src/: lib.rs
crates/parser/tests/: integration.rs
crates/pulldown-cmark/src/: firstpass.rs  parse.rs
crates/pulldown-cmark/tests/: mdx.rs
crates/satteri/: CHANGELOG.md  Cargo.toml
crates/satteri-arena/: Cargo.toml
crates/satteri-arena/src/: arena.rs  builder.rs  kind.rs  mdx_types.rs
crates/satteri-ast/: CHANGELOG.md  Cargo.toml
crates/satteri-ast/src/: commands.rs  convert.rs  rebuild.rs  shared.rs  walk.rs
crates/satteri-mdxjs-rs/: CHANGELOG.md  Cargo.toml
crates/satteri-napi-binding/: CHANGELOG.md  Cargo.toml
crates/satteri-plugin-api/: CHANGELOG.md  Cargo.toml
crates/satteri-pulldown-cmark/: CHANGELOG.md  Cargo.toml
crates/satteri/src/: lib.rs
playground/: index.html  package.json  wrangler.toml
playground/src/: main.ts  prin.css
website/: package.json
website/assets/: prin.css
website/src/: docs_layout.rs  layout.rs
(+35 files in other folders)
