[package]
name = "satteri"
version = "0.1.12"
edition = "2021"
description = "High-level Rust API for the Sätteri markdown/MDX pipeline"
license = "MIT"

[dependencies]
satteri-ast = { version = "0.2.2", path = "../satteri-ast" }
satteri-mdxjs = { version = "0.1.12", path = "../satteri-mdxjs-rs" }
satteri-pulldown-cmark = { version = "0.3.2", path = "../satteri-pulldown-cmark" }
